# test42

./: .gitignore  README.md  configure.ac  configure~  rw.txt
src/: .ast_create.c.swp  .lexer.h.swp  42sh.c  Makefile.am  ast.c  ast.h  ast_create.c  ast_create_basics.c  builtin.c  builtin.h  exec.c  exec.h  expansion.c  expansion.h  io_backend.c  io_backend.h  lexer.c  lexer.h  old_parser.c  parser.c  parser.h  parser_2.c  special.c  special.h  test_builtin.c  test_manual.c  test_parser.c
src/.deps/: 42sh-42sh.Po  42sh.Po  ast_create.Po  builtin.Po  exec.Po  io_backend.Po  lexer.Po  parser.Po
tests/: Makefile.am  test_exec.c  testsuite.sh
tests/test_func/append_redir/: append.sh
tests/test_func/brack_simple/: brack.sh
tests/test_func/comment/: comment.sh
tests/test_func/echo_comment/: echo_comment.sh
tests/test_func/elif/: elif.sh
tests/test_func/esc_basic/: esc.out  esc.sh
tests/test_func/esc_db_in_db/: db.out  db.sh
tests/test_func/esc_in_db_quotes/: esc_db.sh
tests/test_func/esc_nl/: nl.out  nl.sh
tests/test_func/escape_double/: escape_double.out  escape_double.sh
tests/test_func/exit_too_many_arg/: too_many.err  too_many.sh
tests/test_func/hashtag/: hashtag.out  hashtag.sh
tests/test_func/if_else/: if_else.sh
tests/test_func/long/: long.out  long.sh
tests/test_func/mix_double_quotes/: mix_double_quotes.sh
tests/test_func/mult_app_redirection/: mult_app.out  mult_app.sh
tests/test_func/multi_line_if/: multi_line_if.sh
tests/test_func/multi_redir/: .redir.sh.swp  redir.sh
tests/test_func/multi_semicol/: semicol.sh
tests/test_func/n_opt/: n_opt.sh
tests/test_func/not_cmd/: fail.err  fail.out  fail.sh
tests/test_unitaires/: Makefile.am  test_ast.c  test_ast_basic.c  test_ast_free.c  test_builtin.c  test_expansion.c  test_lexer.c  test_parser.c
(+23 files in other folders)
