bin_PROGRAMS = 42sh

42sh_SOURCES = \
    42sh.c \
    ast_create.c \
    builtin.c \
    exec.c \
    expansion.c \
    io_backend.c \
    lexer.c \
    parser.c \
    special.c \
    ast.h \
    builtin.h \
    exec.h \
    expansion.h \
    io_backend.h \
    lexer.h \
    parser.h \
    special.h

AM_CFLAGS = -std=c99 -pedantic -Wall -Wextra -Werror -Wvla
